# chinese-palette

./: .gitignore  README.md  color.json  index.html  package.json  pnpm-lock.yaml  unocss.config.ts  vite.config.ts
.github/workflows/: build.yml
assets/: index-3f0ce33b.js  index-83cfaeb0.css  index-8b93d818.js  index-9c24df8e.js  index-a130520f.css  index-b8a30d9a.css  index-b8af0e45.js  index-ba37edef.js  rust_wasm_bg.wasm
rust-wasm/: Cargo.toml  LICENSE_MIT
rust-wasm/src/: lib.rs
script/: wasm-package-add-type.js
src/: App.svelte  main.ts
src/lib/: Collapse.svelte
